--- a/contact.html
+++ b/contact.html
@@ -74,53 +74,58 @@
     </main>
 
     <footer>
-        <div class="contact" >
-            <h3>Neurotune</h3>
-            <h4>Contact us</h4>
-            <p>info@neurotune.com</p>
-            <p>2800, Mechelen</p>
-            <a href="#">
-                <img src="./images/Facebook logo.svg" alt="Facebook logo">
-            </a>
+        <div class="footer-item">
+            <div >
+                <h4>Contact us</h4>
+                <p>info@neurotune.com</p>
+                <p>2800, Mechelen</p>
+                <div class="socials-icons">
+                    <a href="#">
+                        <img class="icon" src="./images/Facebook logo.svg" alt="Facebook logo">
+                    </a>
 
-            <a href="#">
-                <img src="./images/Instagram logo.svg" alt="Instagram logo">
-            </a>
+                    <a href="#">
+                        <img class="icon" src="./images/Instagram logo.svg" alt="Instagram logo">
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="footer-item">
+            <div class="features" >
+                <h4>Features</h4>
+                <ul>
+                    <li><p>Focus sounds</p></li>
+                    <li><p>Mood tracking</p></li>
+                    <li><p>Mind journal</p></li>
+                    <li><p>Breathing exercises</p></li>
+                    <li><p>Focus challenges</p></li>
+                </ul>
+            </div>
         </div>
 
-        <div class="features" >
-            <h4>features</h4>
-            <ul>
-                <li><p>Focus sounds</p></li>
-                <li><p>Mood tracking</p></li>
-                <li><p>Mind journal</p></li>
-                <li><p>Breathing exercises</p></li>
-                <li><p>Focus challenges</p></li>
-            </ul>
+
+        <div class="footer-item">
+            <div class="resources" >
+                <h4>Resources</h4>
+                <ul>
+                    <li><a class="footerlink" href="faq.html">FAQ</a></li>
+                    <li><a class="footerlink" href="contact.html">Contact</a></li>
+                    <li><a class="footerlink" href="about.html">About us</a></li>
+                </ul>
+            </div>
         </div>
 
-        <div class="resources" >
-            <h4>Resources</h4>
-            <ul>
-                <li><a href="faq.html">FAQ</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="about.html">About us</a></li>
-            </ul>
-        </div>
+        <div class="footer-item">
+            <div class="get-app" >
+                <h4>Get the app</h4>
+                <a href="#">
+                    <img src="./images/app store downlaod.jpg" alt="Download app store">
+                </a>
 
-        <div class="get app" >
-            <h4>Get the app</h4>
-            <a class="download" href="#">
-                <img src="./images/app store downlaod.jpg" alt="Download app store">
-            </a>
-
-             <a class="download" href="#">
-                <img src="./images/google play download.jpg" alt="Download google play">
-            </a>
-        </div>
-
-        <div class="footer bottom">
-            <p>Copyright © 2020. All rights reserved.</p>
+                <a href="#">
+                    <img src="./images/google play download.jpg" alt="Download google play">
+                </a>
+            </div>
         </div>
     </footer>
 </body>
