--- a/contact.html
+++ b/contact.html
@@ -56,8 +56,8 @@
                     </div>
 
                     <div>
-                        <label for="description">Description</label>
-                        <input type="text" id="Description">
+                        <label  for="description" >Description</label>
+                        <input  type="text" id="Description">
                     </div>
 
                     <a class="btn" href="#">Send request</a>
@@ -65,7 +65,7 @@
             </div>
 
             <div>
-        <img class="kaart" src="./images/contact us kaart.jpg" alt="locatie">
+        <img class="kaart" src="images/contact us kaart.jpg" alt="locatie">
         </div>
         </section>
         
