witte strook boven + H3 weg home

--- a/index.html
+++ b/index.html
@@ -32,11 +32,10 @@
             </div>   
         </nav>
 
-        <section>
+        <section class="indexsection1">
         <div>
             <h1>Clarity in the noise.</h1>
             <p>NeuroTune helps you stay calm and focused through personalized sound and simple tools designed for clearer concentration.</p>
-            <h3>A quiet mind is a powerful mind.</h3>
             <a class="btn" href="#">Download now</a>
         </div>
         
