kaart padding fix

--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
                 </form>
             </div>
 
-            <div>
+            <div class="kaart-wrapper">
         <img class="kaart" src="images/contact us kaart.jpg" alt="locatie">
         </div>
         </section>
