--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <section class="section2">
             <h3>Our features</h3>
             <h2>Calmness is our first priority</h2>
-            <div>
+            <div class="features">
                 <article class="article" >
                     <div>
                         <img src="./images/hart icoon.svg" alt="#">
