--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             </div>
         </div>
         <div class="footer-item">
-            <div class="features" >
+            <div>
                 <h4>Features</h4>
                 <ul>
                     <li><p>Focus sounds</p></li>
