--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
     <footer>
         <div class="footer-item">
-            <div >
+            <div class="contact-footer">
                 <h4>Contact us</h4>
                 <p>info@neurotune.com</p>
                 <p>2800, Mechelen</p>
