--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
 
     <footer>
         <div class="footer-item">
-            <div >
+            <div class="contact-footer">
                 <h4>Contact us</h4>
                 <p>info@neurotune.com</p>
                 <p>2800, Mechelen</p>
@@ -73,7 +73,7 @@
             </div>
         </div>
         <div class="footer-item">
-            <div class="features" >
+            <div>
                 <h4>Features</h4>
                 <ul>
                     <li><p>Focus sounds</p></li>
