about us page responsive

--- a/about.html
+++ b/about.html
@@ -33,6 +33,7 @@
     <main>
         <section class="about-section1">
                 <h1>About us</h1>
+        <div class="about-wrapper1">
             <div>
                 <h2>What we stand for</h2>
                 <p>At NeuroTune, we believe that everyone deserves a calmer space to think. Our mission is to create tools that reduce overwhelm, cut noise, and restore balance — especially for people who feel easily distracted or overstimulated.</p>
@@ -41,9 +42,11 @@
             <div>
                 <img class="aboutimg1" src="images/about-image-man.png" alt="afbeelding man">
             </div>
+        </div>    
         </section>
 
         <section class="about-section2">
+           <div class="about-wrapper2">
             <div>
                 <h2>Our mission</h2>
                 <p>We created NeuroTune to make focus simpler, softer, and more human. Using personalized sound, gentle exercises, and supportive routines, we help you create a daily environment where your mind can finally breathe.</p>
@@ -52,6 +55,7 @@
             <div>
                 <img class="aboutimg2" src="images/about image cd.png" alt="afbeelding cd">
             </div>
+           </div>  
         </section>
     </main>
 
