--- a/faq.html
+++ b/faq.html
@@ -37,28 +37,28 @@
   
 
   <div class="faq">
-    <input type="radio" name="faq" id="q1" checked>
+    <input type="radio" name="faq" class="questions" id="q1" checked>
     <label for="q1">Is the app free to use?</label>
     <div class="answer">
       <h3>Is the app free to use?</h3>
       <p>Yes, the app is free to use, but there is an upgrade for your plan available.</p>
     </div>
 
-    <input type="radio" name="faq" id="q2">
+    <input type="radio" name="faq" class="questions" id="q2">
     <label for="q2">Does NeuroTune replace medical treatment?</label>
     <div class="answer">
       <h3>Does NeuroTune replace medical treatment?</h3>
       <p>No, it is a supportive tool designed to help you focus and calm down.</p>
     </div>
 
-    <input type="radio" name="faq" id="q3">
+    <input type="radio" name="faq" class="questions" id="q3">
     <label for="q3">Do I need ADHD or a diagnosis to use NeuroTune?</label>
     <div class="answer">
       <h3>Do I need ADHD or a diagnosis to use NeuroTune?</h3>
       <p>No, anyone can use NeuroTune, with or without concentration challenges.</p>
     </div>
 
-    <input type="radio" name="faq" id="q4">
+    <input type="radio" name="faq" class="questions" id="q4">
     <label for="q4">Can I listen whenever I want?</label>
     <div class="answer">
       <h3>Can I listen whenever I want?</h3>
