contact page responsive+...

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         
         <div>
-            <img class="hero" src="./images/header image transparant.png" alt="#">
+            <img class="hero" src="images/header image transparant.png" alt="#">
         </div>
         </section>
     </header>
