--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,7 @@
             <div class="contact">
                 <h1>Contact us</h1>
                 <p>Have a question, suggestion, or just want to say hello? We’d love to hear from you!  Fill out the form below or reach out to us directly, and we’ll get back to you as soon as possible.</p>
+            <div class="contact-layout">
                 <form action="contact-form">
                     <div class="topic">
                         <label for="topic"></label>
@@ -57,7 +58,7 @@
 
                     <div>
                         <label  for="description" >Description</label>
-                        <input  type="text" id="Description">
+                        <textarea class="description" id="description" rows="5"></textarea>
                     </div>
 
                     <a class="btn" href="#">Send request</a>
@@ -65,7 +66,8 @@
             </div>
 
             <div class="kaart-wrapper">
-        <img class="kaart" src="images/contact us kaart.jpg" alt="locatie">
+        <img class="kaart" src="images/map.png" alt="locatie">
+        </div>
         </div>
         </section>
         
