faq en contact validate

--- a/contact.html
+++ b/contact.html
@@ -10,10 +10,10 @@
     <header>
         <nav>
             <a class="logo" href="index.html">
-                <img class="logo" src="./images/logo neurotune svg.svg" alt="Neurotune logo">
+                <img class="logo" src="images/logo-neurotune-svg.svg" alt="Neurotune logo">
             </a>
         
-            <input type="checkbox" id="hamburger"/>
+            <input type="checkbox" id="hamburger">
 
             <label for="hamburger" class="hamburger">
                 <span></span>
@@ -24,8 +24,8 @@
             <div class="slideout">
                 <a class="links" href="index.html">Home</a>
                 <a class="links" href="faq.html">FAQ</a>
-                <a class="links" id="navlink" href="about.html">About us</a>
-                <a class="links" id="navlink" href="contact.html">Contact</a>
+                <a class="links" href="about.html">About us</a>
+                <a class="links" href="contact.html">Contact</a>
             </div>   
         </nav>
     </header>
@@ -39,7 +39,7 @@
                     <div class="topic">
                         <label for="topic"></label>
                         <select name="topic" id="topic">
-                            <option value=""disabled selected>Select topic</option>
+                            <option value="" disabled selected>Select topic</option>
                             <option value="support">Support</option>
                             <option value="general">General question</option>
                             <option value="other">Other</option>
@@ -47,8 +47,8 @@
                     </div>
 
                     <div>
-                        <label for="Your name">Your name</label>
-                        <input type="text" id="Your name">
+                        <label for="Your-name">Your name</label>
+                        <input type="text" id="Your-name">
                     </div>
 
                     <div>
@@ -78,16 +78,18 @@
     <footer>
         <div class="footer-item">
             <div class="contact-footer">
-                <h4>Contact us</h4>
+                <h2 class="invisibleheadercontact">2</h2>
+                <h3 class="invisibleheadercontact">&</h3>
+                <h4 id="contacth2">Contact us</h4>
                 <p>info@neurotune.com</p>
                 <p>2800, Mechelen</p>
                 <div class="socials-icons">
                     <a href="#">
-                        <img class="icon" src="./images/Facebook logo.svg" alt="Facebook logo">
+                        <img class="icon" src="images/Facebook-logo.svg" alt="Facebook logo">
                     </a>
 
                     <a href="#">
-                        <img class="icon" src="./images/Instagram logo.svg" alt="Instagram logo">
+                        <img class="icon" src="images/Instagram-logo.svg" alt="Instagram logo">
                     </a>
                 </div>
             </div>
@@ -121,11 +123,11 @@
             <div class="get-app" >
                 <h4>Get the app</h4>
                 <a href="#">
-                    <img src="./images/app store downlaod.jpg" alt="Download app store">
+                    <img src="images/app-store-downlaod.jpg" alt="Download app store">
                 </a>
 
                 <a href="#">
-                    <img src="./images/google play download.jpg" alt="Download google play">
+                    <img src="images/google-play-download.jpg" alt="Download google play">
                 </a>
             </div>
         </div>
