--- a/faq.html
+++ b/faq.html
@@ -11,10 +11,10 @@
     <header>
         <nav>
             <a href="index.html">
-                <img src="./images/logo neurotune svg.svg" alt="Neurotune logo" class="logo">
+                <img src="images/logo-neurotune-svg.svg" alt="Neurotune logo" class="logo">
             </a>
 
-            <input type="checkbox" id="hamburger"/>
+            <input type="checkbox" id="hamburger">
 
             <label for="hamburger" class="hamburger">
                 <span></span>
@@ -25,8 +25,8 @@
             <div class="slideout">
                 <a class="links" href="index.html">Home</a>
                 <a class="links" href="faq.html">FAQ</a>
-                <a class="links" id="navlink" href="about.html">About us</a>
-                <a class="links" id="navlink" href="contact.html">Contact</a>
+                <a class="links" href="about.html">About us</a>
+                <a class="links" href="contact.html">Contact</a>
             </div>   
         </nav>
     </header>
@@ -78,11 +78,11 @@
                 <p>2800, Mechelen</p>
                 <div class="socials-icons">
                     <a href="#">
-                        <img class="icon" src="./images/Facebook logo.svg" alt="Facebook logo">
+                        <img class="icon" src="images/Facebook-logo.svg" alt="Facebook logo">
                     </a>
 
                     <a href="#">
-                        <img class="icon" src="./images/Instagram logo.svg" alt="Instagram logo">
+                        <img class="icon" src="images/Instagram-logo.svg" alt="Instagram logo">
                     </a>
                 </div>
             </div>
@@ -116,11 +116,11 @@
             <div class="get-app" >
                 <h4>Get the app</h4>
                 <a href="#">
-                    <img src="./images/app store downlaod.jpg" alt="Download app store">
+                    <img src="images/app-store-downlaod.jpg" alt="Download app store">
                 </a>
 
                 <a href="#">
-                    <img src="./images/google play download.jpg" alt="Download google play">
+                    <img src="images/google-play-download.jpg" alt="Download google play">
                 </a>
             </div>
         </div>
