validate about us

--- a/about.html
+++ b/about.html
@@ -10,10 +10,10 @@
     <header>
         <nav>
             <a class="logo" href="index.html">
-                <img class="logo" src="./images/logo neurotune svg.svg" alt="Neurotune logo">
+                <img class="logo" src="images/logo-neurotune-svg.svg" alt="Neurotune logo">
             </a>
             
-            <input type="checkbox" id="hamburger"/>
+            <input type="checkbox" id="hamburger">
 
             <label for="hamburger" class="hamburger">
                 <span></span>
@@ -24,8 +24,8 @@
             <div class="slideout">
                 <a class="links" href="index.html">Home</a>
                 <a class="links" href="faq.html">FAQ</a>
-                <a class="links" id="navlink" href="about.html">About us</a>
-                <a class="links" id="navlink" href="contact.html">Contact</a>
+                <a class="links" href="about.html">About us</a>
+                <a class="links" href="contact.html">Contact</a>
             </div>   
         </nav>
     </header>
@@ -53,7 +53,7 @@
             </div>
 
             <div>
-                <img class="aboutimg2" src="images/about image cd.png" alt="afbeelding cd">
+                <img class="aboutimg2" src="images/about-image-cd.png" alt="afbeelding cd">
             </div>
            </div>  
         </section>
@@ -62,16 +62,17 @@
     <footer>
         <div class="footer-item">
             <div class="contact-footer">
+                <h3 class="validateheaderabout">.</h3>
                 <h4>Contact us</h4>
                 <p>info@neurotune.com</p>
                 <p>2800, Mechelen</p>
                 <div class="socials-icons">
                     <a href="#">
-                        <img class="icon" src="./images/Facebook logo.svg" alt="Facebook logo">
+                        <img class="icon" src="images/Facebook-logo.svg" alt="Facebook logo">
                     </a>
 
                     <a href="#">
-                        <img class="icon" src="./images/Instagram logo.svg" alt="Instagram logo">
+                        <img class="icon" src="images/Instagram-logo.svg" alt="Instagram logo">
                     </a>
                 </div>
             </div>
@@ -105,11 +106,11 @@
             <div class="get-app" >
                 <h4>Get the app</h4>
                 <a href="#">
-                    <img src="./images/app store downlaod.jpg" alt="Download app store">
+                    <img src="images/app-store-downlaod.jpg" alt="Download app store">
                 </a>
 
                 <a href="#">
-                    <img src="./images/google play download.jpg" alt="Download google play">
+                    <img src="images/google-play-download.jpg" alt="Download google play">
                 </a>
             </div>
         </div>
