css link terug zonder ./

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="faq.html">
     <link rel="stylesheet" href="about.html">
     <link rel="stylesheet" href="contact.html">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
